# learn-langchain-from-scratch

./: .env-example  .gitignore  README.md  pyproject.toml
app/: server.py
app/1_language_models/: 0_language_models.ipynb  1_language_model_basic.py  2_language_model_alternatives.py  3_model_with_conversation_input.py
app/2_prompt_templates/: 0_prompt_templates.ipynb  1_simple_prompt_templates.py  2_output_parser.py
app/3_chains/: 0_chain.ipynb  0_chain_under_the_hood.ipynb  0_chains.ipynb  1_basic_chain.py  2_chains_under_the_hood.py  3_create_custom_chain_step.py  4_pararel_chains.py
app/4_sessions/: 0_session.ipynb  1_session_with_simple_object.py  1_simple_conversation.py  2_basic_session.py  2_session_with_in_memory_chat.py
app/5_rag/: 0_basic_rag.ipynb  0a_basic_rag.ipynb  0b_advance_rag.ipynb  1_advance_load_document.ipynb  1_create_simple_vector_store.py  2_advance_split_document.ipynb  2_create_book_vector_store.py  2_create_doc_vector_store.py  3_advance_embedding.ipynb  3_basic_retriever.py  4_advance_retriever.ipynb  4_advance_split_document.py  5_advance_embedding.py  5_book_rag.py  6_book_rag_qa.py  7_books_rag_bot.py
app/5_rag/sources/: country.csv  sangkuriang.txt
app/6_tools_and_agents/: 0_basic_tools_and_agents.ipynb  1_basic_agent.py  1_create_tools.ipynb  2_advance_create_tools.ipynb  3_prebuilt-tools.ipynb  4_browse_agent.py
app/utils/: conversation.py
